# obj_planner

./: CMakeLists.txt  README.md  obj_planner.doctor.toml  package.xml
include/obj_planner/: ConvexMethod.hpp  IBackEnd.hpp  IFrontEnd.hpp  ObjPlannerNode_node.hpp  SimpleBackEnd.hpp  misc.hpp
src/: ConvexMethod.cpp  ObjPlannerNode.cpp  ObjPlannerNode_node.cpp  SimpleBackEnd.cpp
tests/: unit.cpp
